UI improvements, add folder-picker

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "vite-plugin-kaioken": "0.13.1"
   },
   "dependencies": {
+    "@tauri-apps/plugin-dialog": "~2",
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-shell": "~2",
-    "kaioken": "0.32.1"
+    "kaioken": "0.32.1",
+    "tailwind-merge": "^2.5.2"
   }
 }
