--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-kaioken": "0.14.4"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.0.2",
     "@tauri-apps/plugin-dialog": "~2.0.0",
     "@tauri-apps/plugin-fs": "~2.0.0",
     "@tauri-apps/plugin-shell": "~2.0.0",
