--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
     "preview:vite": "vite preview"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.3",
-    "@types/node": "^22.7.7",
+    "@tauri-apps/cli": "2.0.3",
+    "@types/node": "^22.8.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9",
-    "vite-plugin-kaioken": "0.14.4"
+    "vite": "^5.4.10",
+    "vite-plugin-kaioken": "0.14.6"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.0.2",
-    "@tauri-apps/plugin-dialog": "~2.0.0",
-    "@tauri-apps/plugin-fs": "~2.0.0",
-    "@tauri-apps/plugin-shell": "~2.0.0",
-    "kaioken": "0.34.0",
+    "@tauri-apps/api": "2.0.2",
+    "@tauri-apps/plugin-dialog": "2.0.0",
+    "@tauri-apps/plugin-fs": "2.0.0",
+    "@tauri-apps/plugin-shell": "2.0.0",
+    "kaioken": "0.34.6",
     "tailwind-merge": "^2.5.4"
   }
 }
