refactor to support arbitrary script target

--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
     "preview:vite": "vite preview"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "2.0.3",
-    "@types/node": "^22.8.1",
+    "@tauri-apps/cli": "2.0.4",
+    "@types/node": "^22.9.0",
+    "@types/wicg-file-system-access": "^2023.10.5",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
     "vite": "^5.4.10",
-    "vite-plugin-kaioken": "0.14.6"
+    "vite-plugin-kaioken": "0.15.0"
   },
   "dependencies": {
-    "@tauri-apps/api": "2.0.2",
-    "@tauri-apps/plugin-dialog": "2.0.0",
-    "@tauri-apps/plugin-fs": "2.0.0",
-    "@tauri-apps/plugin-shell": "2.0.0",
-    "kaioken": "0.34.6",
+    "@tauri-apps/api": "2.0.3",
+    "@tauri-apps/plugin-dialog": "2.0.1",
+    "@tauri-apps/plugin-fs": "2.0.2",
+    "@tauri-apps/plugin-shell": "2.0.1",
+    "kaioken": "0.35.3",
     "tailwind-merge": "^2.5.4"
   }
 }
