--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "license": "ISC",
   "scripts": {
     "dev": "tauri dev",
     "build": "tauri build",
