--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tauri-apps/api": "2.2.0",
     "@tauri-apps/plugin-dialog": "2.2.0",
     "@tauri-apps/plugin-fs": "2.2.0",
+    "@tauri-apps/plugin-os": "~2",
     "@tauri-apps/plugin-shell": "2.2.0",
     "kaioken": "0.35.9",
     "tailwind-merge": "^2.5.4"
