--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "preview:vite": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.1",
     "@tauri-apps/cli": "2.2.5",
     "@types/node": "^22.10.10",
     "@types/wicg-file-system-access": "^2023.10.5",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.1",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-kaioken": "0.15.0"
